--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:6120"
+  "proxy": "http://localhost:6120",
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
+  }
 }
